--- a/quiz-app/app/globals.css
+++ b/quiz-app/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -71,7 +71,7 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
 * {
   box-sizing: border-box;
@@ -79,6 +79,11 @@
   margin: 0;
 }
 
+/* .light-purple-bg {
+  background-color: #E6E6FA;
+} */
+
+/* 
 html,
 body {
   max-width: 100vw;
@@ -104,4 +109,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
